# pdf-splitter

./: .gitignore  LICENSE.md  README.md  RELEASE.md  pyproject.toml
.github/workflows/: python-publish.yml
pdf_splitter/src/: pdf.py
